crates/server-less/tests/fixtures/typo_suggestion_param.stderr
error: unknown attribute `hlep` — did you mean `help`?

       Valid attributes: name, default, query, path, body, header, short, help, positional

       Examples:
       - #[param(name = "q")]
       - #[param(default = 10)]
       - #[param(query)]
       - #[param(header, name = "X-API-Key")]
       - #[param(short = 'v')]
       - #[param(help = "Enable verbose output")]
       - #[param(positional)]
 --> tests/fixtures/typo_suggestion_param.rs:9:33
  |
9 |     pub fn hello(&self, #[param(hlep = "A greeting")] name: String) -> String {
  |                                 ^^^^
